# MalaCryptorV2

./: .gitmodules  README.md
mala_cryptor/: Cargo.toml  run_tests.sh
mala_cryptor/src/: chunked_file_reader.rs  enc_algos_in_use.rs  file_asymmetric_encryption.rs  file_asymmetric_encryption_v2.rs  file_symmetric_encryption.rs  global_constants.rs  key_derivation.rs  key_file.rs  key_file_old.rs  key_file_v3.rs  key_file_v4.rs  main.rs
mala_cryptor/src/enc/: classical.rs  file_asymmetric_encryption.rs  file_symmetric_encryption.rs  mod.rs  quantum.rs
mala_cryptor/src/key_file/: classical.rs  hybrid.rs  key_file.rs  key_pair.rs  key_quad.rs  mod.rs  quantum.rs  signature_keyexchange.rs  symmetric.rs
mala_cryptor/src/key_file/base/: key_pair.rs  key_quad.rs  mod.rs  secret_mem.rs  signature_keyexchange.rs
